# nunts

./: README.md  docker-compose.yml
hello-nest-microservice/: Dockerfile  package.json
hello-nest-microservice/src/hello/: hello.controller.spec.ts  hello.controller.ts  hello.module.ts  hello.service.ts
hello-python-microservice/: Dockerfile  requirements.txt
hello-python-microservice/src/: main.py
hello-rust-microservice/: Cargo.toml  Dockerfile
hello-rust-microservice/src/: main.rs
http-api-gateway-nest/: README.md  package.json
http-api-gateway-nest/src/: app.module.ts  main.ts
http-api-gateway-nest/src/hello-api/: hello-api.controller.spec.ts  hello-api.controller.ts  hello-api.module.ts
http-api-gateway-nest/test/: app.e2e-spec.ts
