[package]
name = "hello_rust_microservice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-nats = "0.33.0"
bytes = "1.5.0"
futures = "0.3.30"
serde = "1.0.197"
serde_json = "1.0.114"
tokio = { version = "1", features = ["full"] }

